Correções de bugs e estilização da barra de rolagem

--- a/src/app/paciente-historicos/historico-alimentar/cadastrado-historico-alimentar/cadastrado-historico-alimentar.component.html
+++ b/src/app/paciente-historicos/historico-alimentar/cadastrado-historico-alimentar/cadastrado-historico-alimentar.component.html
@@ -1,5 +1,5 @@
-<button class="btn btn-success" style="width: 100%;" (click)="abrirDialogCadastro = true"
-    [disabled]="!exibirBotaoCadastrarHistorico || !informacoesParaCadastro">
+<button *ngIf="exibirBotaoCadastrarHistorico && informacoesParaCadastro" class="btn btn-success" 
+    style="width: 100%;" (click)="abrirDialogCadastro = true">
     <i class="fas fa-plus"></i>
     Cadastrar histórico alimentar
 </button>
