Criação dos componentes de Dashboard e Relatórios e Gráficos

--- a/src/app/atendimento-paciente/consulta/consulta.component.html
+++ b/src/app/atendimento-paciente/consulta/consulta.component.html
@@ -6,7 +6,9 @@
 </div>
 
 <div *ngIf="!carregandoInformacoesDosHistoricosDoPaciente && !carregandoInformacoesParaCadastroConsulta" class="container-fluid">
-    <div class="col-12 col-sm-8 mt-4">
+    <h3 class="text-center mt-5">Consulta</h3>
+
+    <div class="col-12 col-sm-8 mt-3">
         <p-fieldset [toggleable]="true">
             <p-header>
                 Ficha de identificação
