--- a/src/app/horario-atendimento/horario-atendimento.component.html
+++ b/src/app/horario-atendimento/horario-atendimento.component.html
@@ -1,5 +1,7 @@
 <div class="container-fluid">
-    <div class="borda-table">
+    <h3 class="text-center mt-5">Horários de Atendimento</h3>
+
+    <div class="borda-table mt-3">
         <p-table [value]="diasDeAtendimento" [columns]="colunasTabela" [responsive]="true" class="text-center">
             <ng-template pTemplate="caption">
                 <div style="text-align: right;">
