--- a/src/app/atendimento-paciente/retorno-consulta/retorno-consulta.component.html
+++ b/src/app/atendimento-paciente/retorno-consulta/retorno-consulta.component.html
@@ -6,50 +6,52 @@
 </div>
 
 <div *ngIf="!carregandoPagina" class="container-fluid">
-  <div class="col-12 col-sm-8 mt-4">
-    <p-fieldset [toggleable]="true">
-        <p-header>
-            Ficha de identificação
-        </p-header>
+    <h3 class="text-center mt-5">Retorno da Consulta</h3>
 
-        <div class="row">
-            <div class="col-12 col-md-6">
-                <div><b>Nome: </b>{{ informacoesCadastroRetornoConsulta.paciente.nome }}</div>
+  <div class="col-12 col-sm-8 mt-3">
+        <p-fieldset [toggleable]="true">
+            <p-header>
+                Ficha de identificação
+            </p-header>
 
-                <div>
-                    <span><b>Sexo: </b>{{ informacoesCadastroRetornoConsulta.paciente.sexo }}</span>
-                    <span class="px-3"><b>Etnia: </b>{{ informacoesCadastroRetornoConsulta.paciente.etnia }}</span>      
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <div><b>Nome: </b>{{ informacoesCadastroRetornoConsulta.paciente.nome }}</div>
+
+                    <div>
+                        <span><b>Sexo: </b>{{ informacoesCadastroRetornoConsulta.paciente.sexo }}</span>
+                        <span class="px-3"><b>Etnia: </b>{{ informacoesCadastroRetornoConsulta.paciente.etnia }}</span>      
+                    </div>
+                    
+                    <div><b>Data de Nascimento: </b>{{ informacoesCadastroRetornoConsulta.paciente.dataNascimento }}</div>
+                    <div><b>Telefone: </b>{{ informacoesCadastroRetornoConsulta.paciente.telefone }}</div>
+                    <div *ngIf="informacoesCadastroRetornoConsulta.paciente.telefoneRecado">
+                        <b>Telefone para Recado: </b>{{ informacoesCadastroRetornoConsulta.paciente.telefoneRecado }}
+                    </div>
                 </div>
-                
-                <div><b>Data de Nascimento: </b>{{ informacoesCadastroRetornoConsulta.paciente.dataNascimento }}</div>
-                <div><b>Telefone: </b>{{ informacoesCadastroRetornoConsulta.paciente.telefone }}</div>
-                <div *ngIf="informacoesCadastroRetornoConsulta.paciente.telefoneRecado">
-                    <b>Telefone para Recado: </b>{{ informacoesCadastroRetornoConsulta.paciente.telefoneRecado }}
+
+                <div class="col-12 col-md-6">
+                    <div><b>Logradouro: </b>{{ informacoesCadastroRetornoConsulta.paciente.endereco.logradouro }}</div>
+                    <div><b>Número: </b>{{ informacoesCadastroRetornoConsulta.paciente.endereco.numero }}</div>
+                    <div *ngIf="informacoesCadastroRetornoConsulta.paciente.endereco.complemento">
+                        <b>Complemento: </b>{{ informacoesCadastroRetornoConsulta.paciente.endereco.complemento }}
+                    </div>
+                    <div><b>Bairro: </b>{{ informacoesCadastroRetornoConsulta.paciente.endereco.bairro }}</div>
+                    <div><b>Cidade: </b>{{ informacoesCadastroRetornoConsulta.paciente.endereco.cidade }}</div>
+
+                    <div>
+                        <span><b>CEP: </b>{{ informacoesCadastroRetornoConsulta.paciente.endereco.cep }}</span>
+                        <span class="pl-3"><b>UF: </b>{{ informacoesCadastroRetornoConsulta.paciente.endereco.uf }}</span>
+                    </div>
                 </div>
             </div>
 
-            <div class="col-12 col-md-6">
-                <div><b>Logradouro: </b>{{ informacoesCadastroRetornoConsulta.paciente.endereco.logradouro }}</div>
-                <div><b>Número: </b>{{ informacoesCadastroRetornoConsulta.paciente.endereco.numero }}</div>
-                <div *ngIf="informacoesCadastroRetornoConsulta.paciente.endereco.complemento">
-                    <b>Complemento: </b>{{ informacoesCadastroRetornoConsulta.paciente.endereco.complemento }}
-                </div>
-                <div><b>Bairro: </b>{{ informacoesCadastroRetornoConsulta.paciente.endereco.bairro }}</div>
-                <div><b>Cidade: </b>{{ informacoesCadastroRetornoConsulta.paciente.endereco.cidade }}</div>
-
-                <div>
-                    <span><b>CEP: </b>{{ informacoesCadastroRetornoConsulta.paciente.endereco.cep }}</span>
-                    <span class="pl-3"><b>UF: </b>{{ informacoesCadastroRetornoConsulta.paciente.endereco.uf }}</span>
-                </div>
+            <div class="mt-2">
+            <div><b>Informações da consulta: </b>{{ informacoesCadastroRetornoConsulta.dataHorarioConsultaDoRetorno }}</div>
+                <div><b>Motivo da consulta: </b>{{ informacoesCadastroRetornoConsulta.motivoConsultaDoRetorno }}</div>
             </div>
-        </div>
-
-        <div class="mt-2">
-          <div><b>Informações da consulta: </b>{{ informacoesCadastroRetornoConsulta.dataHorarioConsultaDoRetorno }}</div>
-            <div><b>Motivo da consulta: </b>{{ informacoesCadastroRetornoConsulta.motivoConsultaDoRetorno }}</div>
-        </div>
-    </p-fieldset>
-  </div>
+        </p-fieldset>
+    </div>
 
   <div class="mt-3">
     <app-registro-dieta [cadastrarRegistroDieta]="true" [tipoRegistro]="'Registro de dieta habitual'"
