--- a/src/app/atendimento-paciente/tabela-consultas-retornos/tabela-consultas-retornos.component.html
+++ b/src/app/atendimento-paciente/tabela-consultas-retornos/tabela-consultas-retornos.component.html
@@ -1,5 +1,7 @@
 <div class="container-fluid">
-    <div class="borda-table">
+    <h3 class="text-center mt-5">Consultas & Retornos</h3>
+
+    <div class="borda-table mt-3">
         <p-table #dataView [value]="atendimentos" [columns]="colunasTabela" [responsive]="true" 
             [rows]="8" [paginator]="true" class="text-center">
 
