--- a/src/app/paciente/tabela-pacientes/tabela-pacientes.component.css
+++ b/src/app/paciente/tabela-pacientes/tabela-pacientes.component.css
@@ -3,6 +3,11 @@
     width: calc(100% - 28px);
 }
 
+.borda-table {
+    border: 2px solid rgba(209, 209, 209, 0.774);
+    border-radius: 2px;
+}
+
 @media (max-width: 640px) {
     td:first-child {
         border-right: 1px solid #c8c8c8 !important;
