--- a/src/app/patologia/patologia.component.html
+++ b/src/app/patologia/patologia.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-    <div class="borda-table">
+    <h3 class="text-center mt-5">Patologias</h3>
+
+    <div class="borda-table mt-3">
         <p-table #dataView [value]="patologias" [columns]="colunasTabela" [responsive]="true" 
             [rows]="8" [paginator]="true" class="text-center">
 
