Adicionado o componente Dashboard nos demais componentes

--- a/src/app/atendimento-paciente/consulta/consulta.component.html
+++ b/src/app/atendimento-paciente/consulta/consulta.component.html
@@ -5,6 +5,8 @@
     </div>
 </div>
 
+<app-dashboard *ngIf="!carregandoInformacoesDosHistoricosDoPaciente && !carregandoInformacoesParaCadastroConsulta"></app-dashboard>
+
 <div *ngIf="!carregandoInformacoesDosHistoricosDoPaciente && !carregandoInformacoesParaCadastroConsulta" class="container-fluid">
     <h3 class="text-center mt-5">Consulta</h3>
 
