--- a/src/app/atendimento-paciente/retorno-consulta/retorno-consulta.component.html
+++ b/src/app/atendimento-paciente/retorno-consulta/retorno-consulta.component.html
@@ -5,6 +5,8 @@
     </div>
 </div>
 
+<app-dashboard *ngIf="!carregandoPagina"></app-dashboard>
+
 <div *ngIf="!carregandoPagina" class="container-fluid">
     <h3 class="text-center mt-5">Retorno da Consulta</h3>
 
