--- a/src/app/pagina-inicial/pagina-inicial.component.html
+++ b/src/app/pagina-inicial/pagina-inicial.component.html
@@ -1,3 +1,5 @@
+<app-dashboard></app-dashboard>
+
 <div class="container-buttons">
     <div>
         <button class="btn btn-success" [routerLink]="['/consultas-retornos']">
