--- a/src/app/relatorios-graficos/pagina-relatorios-graficos/pagina-relatorios-graficos.component.html
+++ b/src/app/relatorios-graficos/pagina-relatorios-graficos/pagina-relatorios-graficos.component.html
@@ -1,3 +1,5 @@
+<app-dashboard></app-dashboard>
+
 <div class="container-fluid">
-    <h3 class="text-center mt-5">Relatórios & Gráficos</h3>
+    <h3 class="text-center mt-5">Patologias</h3>
 </div>
