--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,7 +10,7 @@
     
         <div>
             <span class="p-float-label mt-3 p-2">
-                <input style="width: 300px;" type="password" [(ngModel)]="credenciaisUsuario.senha" pInputText> 
+                <input style="width: 300px;" type="password" maxlength="20" [(ngModel)]="credenciaisUsuario.senha" pInputText> 
                 <label class="pl-2" for="inputtext">Senha</label>
             </span>
         </div>
